src/index.css
@import "tailwindcss";



:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}



h1 {
  font-size: 3.2em;
  line-height: 1.1;
}



@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
}


@media print {
  body * {
    visibility: hidden;
  }

  .print-area,
  .print-area * {
    visibility: visible;
  }

  .print-area {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
  }
}

@media print {
  body * {
    visibility: hidden;
  }

  #print-section, 
  #print-section * {
    visibility: visible;
  }

  #print-section {
    position: absolute;
    align-items: center;
    margin-top: 30mm; /* Adjust as needed for top margin */
    height: 800mm; /* Adjust as needed for receipt length */
    top: 20mm; /* Adjust as needed for top margin */
    left: 10mm; /* for 80mm thermal printer */
    top: 0;
    width: 80mm; /* for 80mm thermal printer */

  }
}
@page {
  margin: 0;
}

#print-section {
  font-size: 12px;
  font-family: monospace;
  
}

